# TA_agent

./: .gitignore  README.md  main.py  pyproject.toml
assignments/assignment_1/: README.md  config.yaml
config/: settings.yaml
output/assignment_1/: grades_20260131_131457.csv  grading_log_20260131_131457.jsonl
src/grader_agent/: __init__.py  grader.py  pdf_processor.py  prompt_builder.py
tests/: test_grader.py
tests/fixtures/: config.yaml
