[project]
name = "grader-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Mobinzarreh",email = "mzarreh@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.0.0",
    "ipython>=8.12.0"
]

[tool.poetry]
packages = [{include = "grader_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
